--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@wixc3/react-board": "^2.1.3",
     "resolve-url-loader": "^5.0.0",
     "webpack": "^5.75.0"
   }
